# stream-log

./: .gitignore  COPYRIGHT  README.md
client/: Cargo.toml  index.html  index.scss
client/scripts/: google_auth.js
client/src/: app.rs  color_utils.rs  dom.rs  entry_type_colors.rs  entry_utils.rs  error.rs  event_type_colors.rs  js_def.rs  main.rs  page_utils.rs  subscriptions.rs  user_info_bar.rs  websocket.rs
client/src/components/: color_input_with_contrast.rs  error_display.rs  event_log_entry.rs  mod.rs  user_info_bar.rs
client/src/components/event_log_entry/: edit.rs  entry.rs  mod.rs  row.rs  typing.rs  utils.rs
client/src/pages/: error.rs  event_log.rs  event_log_entry_types.rs  event_selection.rs  mod.rs  not_found.rs  register.rs  register_complete.rs  start_redirect.rs  tags.rs  user_profile.rs
client/src/pages/admin/: account_approval.rs  assign_entry_types.rs  assign_event_types.rs  assign_groups.rs  dashboard.rs  manage_applications.rs  manage_editors.rs  manage_entry_types.rs  manage_event_types.rs  manage_events.rs  manage_groups.rs  manage_info_pages.rs  manage_sections.rs  manage_tabs.rs  manage_tags.rs  manage_users.rs  (+3 more)
client/src/subscriptions/: connection.rs  errors.rs  event.rs  manager.rs  mod.rs  registration.rs
client/styles/: _color_input.scss  _colors.scss  _errors.scss  _event_log.scss  _register.scss  _user_menu.scss  _user_profile.scss  index.scss
client/styles/admin/: _applications.scss  _editors.scss  _entry_types.scss  _events.scss  _info_pages.scss  _permission_group_users.scss  _permission_groups.scss  _sections.scss  _tabs.scss  _tags.scss  _users.scss
client/styles/event_log/: _entry_types.scss  _log.scss  _tags.scss
server/: Cargo.toml  config-example.kdl  diesel.toml
server/migrations/2022-04-16-223321_create_users/: down.sql  up.sql
server/migrations/2022-04-24-204754_create_events_roles/: down.sql  up.sql
server/migrations/2022-06-12-210143_user_permissions/: down.sql  up.sql
server/migrations/2022-12-10-204857_create_entry_types/: down.sql  up.sql
server/migrations/2022-12-10-204857_create_event_types/: down.sql  up.sql
server/migrations/2022-12-11-224431_make_types_available_for_entries/: down.sql  up.sql
server/migrations/2022-12-11-224431_make_types_available_for_events/: down.sql  up.sql
server/migrations/2023-01-08-200230_add_user_colors/: down.sql  up.sql
server/migrations/2023-01-14-191736_add_tags/: down.sql  up.sql
server/migrations/2023-01-15-232604_add_log/: down.sql  up.sql
server/migrations/2023-03-25-025934_add_log_entry_parent/: down.sql  up.sql
server/migrations/2023-03-25-030610_event_editors/: down.sql  up.sql
server/migrations/2023-04-16-221210_remove_tag_events/: down.sql  up.sql
server/migrations/2023-06-17-021636_store_deleted_entries/: down.sql  up.sql
server/migrations/2023-06-25-061640_add_creation_time/: down.sql  up.sql
server/migrations/2023-06-25-172510_add_manual_sort/: down.sql  up.sql
server/migrations/2023-07-15-225821_add_event_log_sections/: down.sql  up.sql
server/migrations/2023-08-19-230938_add_video_info_columns/: down.sql  up.sql
server/migrations/2023-08-26-013959_add_tag_playlist_ids/: down.sql  up.sql
server/migrations/2023-08-26-233159_fix_tag_name_constraints/: down.sql  up.sql
server/migrations/2023-08-26-234824_add_poster_moment_column/: down.sql  up.sql
server/migrations/2023-09-02-163822_add_done_editing_state/: down.sql  up.sql
server/migrations/2023-09-03-171625_add_supervisor_permission/: down.sql  up.sql
server/migrations/2023-09-03-204019_mark_entries_incomplete/: down.sql  up.sql
server/migrations/2023-09-04-220105_add_entry_type_descriptions/: down.sql  up.sql
server/migrations/2023-09-08-005953_support_tag_deletion_and_events/: down.sql  up.sql
server/migrations/2023-09-09-021457_add_applications/: down.sql  up.sql
server/migrations/2023-09-10-012013_add_event_log_history/: down.sql  up.sql
server/migrations/2023-09-17-203343_add_edit_time_index/: down.sql  up.sql
server/migrations/2023-09-17-212232_add_info_pages/: down.sql  up.sql
server/migrations/2023-09-21-041038_multiple_media_links/: down.sql  up.sql
server/migrations/2023-09-24-042411_use_generated_edit_links/: down.sql  up.sql
server/migrations/2023-09-26-041458_add_session_store/: down.sql  up.sql
server/migrations/2023-10-11-235049_separate_incomplete_end_times/: down.sql  up.sql
server/migrations/2023-10-12-133618_fix_video_state_values/: down.sql  up.sql
server/migrations/2023-11-12-024142_add_events_default_tab_name/: down.sql  up.sql
server/migrations/2023-11-12-044826_rename_section_to_tab/: down.sql  up.sql
server/migrations/2023-11-12-225622_rename_first_tab_column/: down.sql  up.sql
server/migrations/2024-03-10-184737_rename_video_progress_state/: down.sql  up.sql
server/migrations/2024-06-16-224734_require_end_time_for_entry_types/: down.sql  up.sql
server/migrations/2024-08-14-051518_add_playlist_metadata/: down.sql  up.sql
server/migrations/2024-08-24-185558_add_user_spellcheck_setting/: down.sql  up.sql
server/migrations/2024-08-24-220101_default_video_processing_state/: down.sql  up.sql
server/migrations/2024-08-26-021304_rename_incomplete/: down.sql  up.sql
server/migrations/2024-08-26-032303_nullable_entry_type/: down.sql  up.sql
server/migrations/2024-09-14-011539_rename_notes/: down.sql  up.sql
server/src/: args.rs  config.rs  database.rs  diesel_types.rs  file_types.rs  main.rs  models.rs  schema.rs  session.rs  synchronization.rs  web.rs  websocket_msg.rs
server/src/api/: event_by_name.rs  event_log_list.rs  list_events.rs  mod.rs  set_editor_link.rs  set_video_link.rs  utils.rs
server/src/data_sync/: admin.rs  connection.rs  event_selection.rs  mod.rs  new_event_entries.rs  register.rs  subscriptions.rs  user.rs  user_profile.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/messages/: admin.rs  entry_types.rs  event_log.rs  event_subscription.rs  event_types.rs  events.rs  info_pages.rs  initial.rs  mod.rs  permissions.rs  subscriptions.rs  tags.rs  user.rs  user_register.rs
(+55 files in other folders)
