[package]
name = "stream-log-client"
authors = ["Jacob Riddle (ElementalAlchemist) <ElementAlchemist7@gmail.com>"]
version = "1.0.0-alpha.2"
edition = "2021"
license = "MPL-2.0"

[dependencies]
chrono = { version = "0.4.31", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
contrast = "0.1.0"
futures = "0.3.28"
gloo-net = { version = "0.4.0", features = ["websocket"] }
gloo-timers = "0.3.0"
log = "0.4.20"
markdown = "0.3.0"
rgb = "0.8.36"
serde = "1.0.189"
serde_json = "1.0.107"
stream-log-shared = { path = "../shared" }
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"HtmlButtonElement",
	"HtmlInputElement",
	"HtmlSpanElement",
	"KeyboardEvent",
	"Node",
	"ScrollIntoViewOptions",
	"ScrollLogicalPosition",
	"Url",
	"Window"
]