[package]
name = "stream-log-client"
authors = ["Jacob Riddle (ElementalAlchemist) <ElementAlchemist7@gmail.com>"]
version = "1.0.0-alpha.3"
edition = "2021"
license = "MPL-2.0"

[dependencies]
chrono = { version = "0.4.38", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
contrast = "0.1.0"
futures = "0.3.30"
gloo-net = { version = "0.5.0", features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
log = "0.4.21"
markdown = "0.3.0"
rgb = "0.8.37"
serde = "1.0.203"
serde_json = "1.0.117"
stream-log-shared = { path = "../shared" }
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"HtmlButtonElement",
	"HtmlInputElement",
	"HtmlSpanElement",
	"KeyboardEvent",
	"Node",
	"ScrollIntoViewOptions",
	"ScrollLogicalPosition",
	"Url",
	"Window"
]