[package]
name = "stream-log-client"
authors = ["Jacob Riddle (ElementalAlchemist) <ElementAlchemist7@gmail.com>"]
version = "1.0.0-alpha.3"
edition = "2021"
license = "MPL-2.0"

[dependencies]
chrono = { version = "0.4.38", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
contrast = "0.1.0"
futures = "0.3.30"
gloo-net = { version = "0.6.0", features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
log = "0.4.22"
markdown = "0.3.0"
rgb = "0.8.48"
serde = "1.0.208"
serde_json = "1.0.125"
stream-log-shared = { path = "../shared" }
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.93"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.70"
features = [
	"Clipboard",
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"HtmlButtonElement",
	"HtmlElement",
	"HtmlInputElement",
	"HtmlSpanElement",
	"KeyboardEvent",
	"Navigator",
	"Node",
	"ScrollIntoViewOptions",
	"ScrollLogicalPosition",
	"Selection",
	"Url",
	"Window"
]