[package]
name = "stream-log-server"
authors = ["Jacob Riddle (ElementalAlchemist) <ElementAlchemist7@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.21.3"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
cuid2 = "0.1.0"
diesel = { version = "2.1.0", features = ["chrono", "postgres"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
erased-serde = "0.3.28"
futures = "0.3.28"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
rand = "0.8.5"
rgb = "0.8.36"
serde_json = "1.0.104"
stream-log-shared = { path = "../shared" }
tide = "0.16.0"
tide-openidconnect = "0.1.0"
tide-websockets = "0.4.0"