[package]
name = "stream-log-server"
authors = ["Jacob Riddle (ElementalAlchemist) <ElementAlchemist7@gmail.com>"]
version = "1.0.0-alpha.2"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.21.4"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
cuid2 = "0.1.2"
diesel = { version = "2.1.3", features = ["chrono", "postgres"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
erased-serde = "0.3.31"
futures = "0.3.28"
http-types = "2.12.0"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
rand = "0.8.5"
rgb = "0.8.36"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
stream-log-shared = { path = "../shared" }
tide = "0.16.0"
tide-openidconnect = "0.1.0"
tide-websockets = "0.4.0"