[package]
name = "stream-log-server"
authors = ["Jacob Riddle (ElementalAlchemist) <ElementAlchemist7@gmail.com>"]
version = "1.0.0-alpha.3"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.86"
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
cuid2 = "0.1.2"
diesel = { version = "2.2.1", features = ["chrono", "postgres"] }
diesel_migrations = "2.2.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
erased-serde = "0.4.5"
futures = "0.3.30"
http-types = "2.12.0"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
rand = "0.8.5"
rgb = "0.8.37"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
stream-log-shared = { path = "../shared" }
tide = "0.16.0"
tide-openidconnect = "0.1.0"
tide-websockets = "0.4.0"