[package]
name = "stream-log-shared"
authors = ["Jacob Riddle (ElementalAlchemist) <ElementAlchemist7@gmail.com>"]
version = "1.0.0-alpha.2"
edition = "2021"
license = "MPL-2.0"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
rgb = { version = "0.8.36", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }